# state_space_model_notebooks

./: README.md  pyproject.toml
japanr2023/kfas/: example_effectiveness_estimation.Rmd  example_time_series_decomposition.Rmd
japanr2023/statsmodels/: example_time_series_decomposition.ipynb
kfas/: local_level.R  seasonal.R
pymc/: local level and seasonality model with PyMC3.ipynb
statsmodels/: CommandeurKoopman2007.ipynb  Comparison of Diffuse Initialization Period in Dummy Variable Regression (CommandeurKoopman2007 Section7.2).ipynb  Structured State Space Time Series Modeling with statsmodels.ipynb
