[tool.poetry]
name = "state_space"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.0"
statsmodels = "^0.12.1"
jupyter-contrib-nbextensions = "^0.5.1"
black = "^20.8b1"
autopep8 = "^1.5.4"
matplotlib = "^3.3.3"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.11.1"
jupyterlab = "^3.0.3"
jedi = "^0.17"
pymc3 = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
